# obsidian-mcp

./: .env.example  .gitignore  README.md  ROADMAP.md  bandit-report.json  main.py  pyproject.toml  readme.md  test_client.py  test_delete_client.py
.aiconfig/: append_error_investigation.md  debug_append.py  llms.txt  project_config.md  workflow_state.md
.github/workflows/: trivy-scan.yml
docs/: design.md
obsidian_mcp_server/: main.py  vault_writer.py
